# makocode

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  TODO.md  decoder.h  encoder.h  main.cpp
.github/workflows/: cmake.yml
mt19937/: mt19937.cpp  mt19937.h
src/cxxopts/: LICENSE  README.md  cxxopts.hpp
src/makocode/: cmd.cpp  cmd.hpp  constants.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  encoder_parameters.cpp  encoder_parameters.hpp  main.cpp
src/mt19937/: LICENSE  README.md  mt19937.cpp  mt19937.hpp
src/pcg/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
tests/: CMakeLists.txt  encode_decode_test.cpp
tst/: CMakeLists.txt  cmd_test.cpp  encode_decode_test.cpp
tst/makocode/: cmd_test.cpp  encode_decode_test.cpp
tst/pcg/: pcg_test.cpp  pcg_uint128_test.cpp
